nisengwe-site, second commit

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
       <a class="nav-link nav-link active text-white" href="{% url 'blog_index' %}">Blog</a>
       <a class="nav-item nav-link active text-white" href="{% url 'work_experience' %}">Resume</a>
       <a class="nav-item nav-link active text-white" href="{% url 'consulting_index' %}">(Free) Consulting</a>
-      <a class="nav-item nav-link active text-white" href="{% url 'email' %}" >Contact me</a>
+      <a class="nav-item nav-link active text-white" href="{% url 'contact' %}" >Contact me</a>
     </div>
   </div>
 </nav>
